# roof

./: #.gitignore#  .#.gitignore  .coverage  .gitignore  CLAUDE.md  HeliostatVerifiedControl.hs  LICENSE  Makefile  SolTrace-Cheatsheet.md  artist_integration.py  camera_controller.py  coverage.xml  debug_mjcf.py  debug_physics.md  default.nix  demo_mujoco_integration.py  design-convo.md  device_utils.py  electrostatic_facet.py  electrostatic_physics.txt  flake.nix  heliostat.md  heliostat.vcl  heliostat_verified_control.py  image_based_surface_converter.py  incantation.md  inspect_nurbs_surface.py  lock.aarch64-darwin.json  mjx_artist_integration.py  mjx_autodiff_control.py  mujoco_heliostat_sim.py  pyproject.toml  simulator.md  test_electrostatic.py  test_heliostat_math.py  test_kinematic_alignment.py  test_overflow_source.py  test_surface_learning.py
.dream2nix/python/: editable-args.json
.dream2nix/python/site/: artist.pth  sitecustomize.py
.dream2nix/python/site/heliostat_control-0.1.0.dist-info/: METADATA  direct_url.json
